infra-superset/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: superset-service
  namespace: superset
  labels:
    app: superset
spec:
  type: ClusterIP
  selector:
    app: superset
  ports:
    - port: 80
      targetPort: 8088
      protocol: TCP
